--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -23,13 +23,13 @@
     <PreferenceCategory android:title="Sync" >
 
         <CheckBoxPreference
-            android:key="pref_key_sync"
+            android:key="pref_sync"
             android:title="Sync with OurVLE"
             android:summary="Automatically sync your device to OurVLE"
             android:defaultValue="true" />
 
         <CheckBoxPreference
-            android:key="pref_key_sync_calendar"
+            android:key="pref_sync_calendar"
             android:title="Sync with Google Calendar"
             android:summary="Automatically sync your events to Google Calendar"
             android:defaultValue="false" />
@@ -39,19 +39,19 @@
     <PreferenceCategory android:title="Notifications" >
 
         <CheckBoxPreference
-            android:key="pref_key_notifications"
+            android:key="pref_show_notifications"
             android:title="Notifications"
             android:summary="Notify you when new content is synced"
             android:defaultValue="true" />
 
         <SwitchPreference
-            android:key="pref_key_notifications_sound"
+            android:key="pref_play_notification_sound"
             android:title="Notifications Sound"
             android:summary="Play sound on new notifications"
             android:defaultValue="true" />
 
         <SwitchPreference
-            android:key="pref_key_notifications_vibrate"
+            android:key="pref_notification_vibrate"
             android:title="Notifications Vibrate"
             android:summary="Vibrate on new notifications"
             android:defaultValue="true" />
@@ -61,7 +61,7 @@
     <PreferenceCategory android:title="Storage" >
 
         <CheckBoxPreference
-            android:key="pref_key_storage"
+            android:key="pref_storage"
             android:title="Store to SD card"
             android:summary="Save course resources to an SD card"
             android:defaultValue="false" />
