--- a/app/src/main/res/layout/list_forum_item.xml
+++ b/app/src/main/res/layout/list_forum_item.xml
@@ -21,7 +21,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingTop="20dp"
     android:paddingBottom="20dp"
