--- a/app/src/main/res/layout/frag_event.xml
+++ b/app/src/main/res/layout/frag_event.xml
@@ -21,6 +21,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -33,6 +34,7 @@
             android:id="@+id/eventList"
             android:scrollbars="vertical"
             android:layout_width="fill_parent"
+            tools:listitem="@layout/list_item_event"
             android:layout_height="fill_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
