--- a/app/src/main/res/layout/frag_latest_news.xml
+++ b/app/src/main/res/layout/frag_latest_news.xml
@@ -55,5 +55,11 @@
         android:layout_below="@+id/no_topics"
         android:layout_centerHorizontal="true"
         tools:visibility="gone"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        />
 
 </RelativeLayout>
