--- a/app/src/main/res/layout/frag_course_list.xml
+++ b/app/src/main/res/layout/frag_course_list.xml
@@ -24,19 +24,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+   <!-- <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/courseList"
-            android:scrollbars="none"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            tools:listitem="@layout/course_list_item"/>
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+
+    </android.support.v4.widget.SwipeRefreshLayout>!-->
+
+    <android.support.v7.widget.RecyclerView
+    android:id="@+id/courseList"
+    android:scrollbars="none"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:listitem="@layout/course_list_item"/>
 
 </RelativeLayout>
