--- a/app/src/main/res/layout/list_post_item.xml
+++ b/app/src/main/res/layout/list_post_item.xml
@@ -28,15 +28,13 @@
     android:foreground="?android:selectableItemBackground">
 
     <LinearLayout
+        android:padding="16dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
         <LinearLayout
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -47,10 +45,9 @@
 
             <TextView
                 android:id="@+id/postTitle"
-                android:paddingLeft="10dp"
-                android:textColor="#000000"
-                android:alpha="0.87"
-                android:textSize="18sp"
+                android:paddingLeft="16dp"
+                android:textSize="20sp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 tools:text="Re: Where is Location of Math Exam?"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -58,28 +55,22 @@
         </LinearLayout>
 
         <RelativeLayout
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="10dp"
+            android:paddingTop="16dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/postUser"
-                android:textColor="#000000"
-                android:alpha="0.65"
-                android:textSize="14sp"
                 tools:text="Mattthew Stone"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/postDate"
                 android:layout_alignParentRight="true"
-                android:textColor="#000000"
-                android:alpha="0.65"
-                android:textSize="14sp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 tools:text="Nov 12,2012"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -87,14 +78,9 @@
         </RelativeLayout>
 
         <TextView
+            android:paddingTop="16dp"
             android:id="@+id/postMessage"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textSize="14sp"
-            android:textColor="#000000"
-            android:alpha="0.65"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             tools:text="I can't find the location of my math exam. Someone please help me"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
