--- a/app/src/main/res/layout/list_item_event.xml
+++ b/app/src/main/res/layout/list_item_event.xml
@@ -20,6 +20,7 @@
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_horizontal"
     android:id="@+id/specialView"
     android:clickable="true"
@@ -29,38 +30,34 @@
     android:foreground="?android:selectableItemBackground">
 
     <LinearLayout
+        android:padding="16dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:paddingTop="5dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/calImg"
-                android:src="@mipmap/ic_event"
-                android:layout_marginLeft="5dp"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"/>
-
+                app:srcCompat="@drawable/ic_event_black_24dp"
+                android:layout_height="48dp"
+                android:layout_width="48dp"/>
             <TextView
                 android:id="@+id/eventname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                tools:text="Quiz Closes"
-                android:textSize="16sp"
-                android:textColor="#000000"
-                android:alpha="0.7" />
+                android:paddingLeft="16dp"
+                android:textSize="20sp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                tools:text="Quiz Closes" />
 
         </LinearLayout>
 
         <RelativeLayout
-            android:paddingTop="10dp"
+            android:paddingTop="16dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -69,33 +66,27 @@
                 android:id="@+id/eventcourse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:paddingLeft="5dp"
                 android:layout_alignParentLeft="true"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 tools:text="COMP1161" />
 
             <TextView
                 android:id="@+id/eventdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:layout_alignParentRight="true"
                 tools:text="Jan 03,2014"
-                android:paddingTop="10dp"
-                android:paddingRight="5dp"
-                android:textSize="14sp" />
+                />
         </RelativeLayout>
 
         <TextView
             android:id="@+id/eventdesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="5dp"
-            android:alpha="0.57"
-            tools:text="This quiz is worth 10% of your grade"
-            android:textColor="#000000"
-            android:textSize="14sp" />
+            android:paddingTop="16dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            tools:text="This quiz is worth 10% of your grade" />
 
     </LinearLayout>
 
