--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -50,7 +50,7 @@
 
 
             <ImageView
-                android:src="@drawable/ic_person_24dp"
+                app:srcCompat="@drawable/ic_person_24dp"
                 android:layout_gravity="center"
                 android:layout_width="72dp"
                 android:layout_height="72dp" />
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         app:layout_anchor="@id/app_bar"
-        android:src="@drawable/ic_mail_24dp"
+        app:srcCompat="@drawable/ic_mail_24dp"
         app:layout_anchorGravity="bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
