--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -21,13 +21,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.SignInActivity"
-    android:background="#f04837" >
+    android:background="#f04837">
 
     <LinearLayout
         android:id="@+id/container"
@@ -63,7 +64,8 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/password_float_label"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true" >
 
             <EditText
                 android:id="@+id/editPassword"
