--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -26,7 +26,7 @@
 
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 
-        <item name="android:colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorAccent</item>
 
         <!--<item name="colorControlNormal">#c5c5c5</item>-->
 
