--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -53,7 +53,7 @@
             android:layout_marginBottom="34dp"
             app:hintTextAppearance="@style/TextAppearance.FloatLabelHint" >
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/editTextUser"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
             app:passwordToggleEnabled="true"
             app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/editPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
