--- a/app/src/main/res/layout/activity_courseview.xml
+++ b/app/src/main/res/layout/activity_courseview.xml
@@ -41,11 +41,7 @@
             android:id="@+id/tabLayout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            app:tabIndicatorColor="@android:color/white"
-            app:tabIndicatorHeight="4.0dip"
-            app:tabTextAppearance="?android:textAppearanceMedium"
-            app:tabTextColor="@color/tab_unselected"
-            app:tabSelectedTextColor="@android:color/white" />
+            app:tabIndicatorColor="@android:color/white" />
 
     </android.support.design.widget.AppBarLayout>
 
